# CppDeepLearningLibrary

./: .gitignore  CMakeLists.txt  README.md
include/NeuralNetwork/: Helper.h  Layer.h  NeuralNetwork.h
lib/: CMakeLists.txt  Helper.cpp  Layer.cpp  NeuralNetwork.cpp
sample_code/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  testNeuralNetwork.cpp
